// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditionally shows a payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`doesn't blow up when calling html without a value 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a boolean payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": true,
          "label": "Boolean",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a classname payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "Ray",
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a clear all payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "clear_all",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a clear screen payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "name": "",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "new_screen",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a color payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "green",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "orange",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "red",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "purple",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "blue",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "color": "gray",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "color",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a custom payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "test 123",
          "label": "test",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a file payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "one,two,three<br>",
          "label": "test.txt",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a hide payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "hide",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a json string payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": Object {
            "A": 123,
          },
          "label": "JSON",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a new screen payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "name": "test 1",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "new_screen",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a notify payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "value": "hello world",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "notify",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a null payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": null,
          "label": "Null",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a raw payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "one",
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "log",
      },
      Object {
        "content": Object {
          "values": Array [
            "two",
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a remove payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a remove payload conditionally 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "remove",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a size payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "lg",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "sm",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "size": "lg",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "size",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a string payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "test",
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends a table payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "label": "table",
          "values": Array [
            1,
            2,
            "<code style=\\"font-size: 0.8rem!important;\\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-yellow-400\\">Object</span>&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-500 \\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"A\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>1<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">}</span></code></code>",
            "<code style=\\"font-size: 0.8rem!important;\\">Ray&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"text-gray-500 \\"><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"settings\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>Settings&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">{</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"always_send_raw_values\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>false<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"enable\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>true<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"host\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"localhost\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"local_path\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>null<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"port\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>23517<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"remote_path\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span>null<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">}</span><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br>&nbsp;&nbsp;&nbsp;&nbsp;<code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"uuid\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">:&nbsp;</span><code style=\\"font-size: 0.8rem!important;\\" class=\\"bold text-blue-400 p-0\\">\\"fakeUuid\\"</code><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">,</span><br><span style=\\"font-size: 0.8rem!important;\\" class=\\"text-white\\">}</span></code></code>",
            true,
            null,
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "table",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an html payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<em>test</em>",
          "label": "HTML",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an image payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<img src=\\"http://localhost/test.png\\" alt=\\"\\" />",
          "label": "Image",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "<img src=\\"./TestData/test.txt\\" alt=\\"\\" />",
          "label": "Image",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an object as json payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "value": "\\"{\\\\\\"a\\\\\\":1,\\\\\\"b\\\\\\":2}\\"",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "json_string",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends an xml payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "content": "&lt;root&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&lt;abc&gt;1&lt;/abc&gt;<br>&lt;/root&gt;",
          "label": "XML",
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "custom",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends show and hide app payloads 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "show_app",
      },
    ],
    "uuid": "fakeUuid",
  },
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {},
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "hide_app",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends the ray ban payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "🕶",
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;

exports[`sends the ray charles payload 1`] = `
Array [
  Object {
    "meta": Array [],
    "payloads": Array [
      Object {
        "content": Object {
          "values": Array [
            "🎶 🎹 🎷 🕺",
          ],
        },
        "origin": Object {
          "file": "/test.js",
          "function_name": null,
          "line_number": 999,
        },
        "type": "log",
      },
    ],
    "uuid": "fakeUuid",
  },
]
`;
